# MLOps-Project-ME22B214

./: .buildinfo  .gitattributes  .gitignore  Dockerfile.pipeline  README.md  api.html  architecture.html  business_understanding.html  core.py  datasources.html  distributed.py  docker-compose.yaml  dvc.yaml  eda.ipynb  extractor.py  faq.html  generate-certs.sh  generate_secrets.sh  genindex.html  index.html  installation.html  kernel.py  mlflow.db  notebook.py  objects.inv  pipeline.html  pipeline.py  preprocess.py  pyproject.toml  search.html  searchindex.js  security.html  setup_env.sh  submission.csv  ui_guide.html  usage.html  workspace.py
.doctrees/: api.doctree  architecture.doctree  business_understanding.doctree  datasources.doctree  environment.pickle  faq.doctree  index.doctree  installation.doctree  pipeline.doctree  security.doctree  ui_guide.doctree  usage.doctree
.github/workflows/: security.yml
_sources/: api.rst.txt  datasources.rst.txt  faq.rst.txt  index.rst.txt  installation.rst.txt  pipeline.rst.txt
airflow/: Dockerfile
airflow/dags/: deploy_production_dag.py  drift_detection_dag.py  experiment_pipeline_dag.py  model_selection_dag.py
api/: Dockerfile  auth.py  main.py  middleware.py  pyproject.toml  requirements.txt  serve_app.py
bundle/: setup.py
bundle/oss/: asmk-0.1-cp311-cp311-linux_x86_64.whl  croco-0.1.2-py3-none-any.whl  curope-0.0.0-cp311-cp311-linux_x86_64.whl  dad-0.2.0-py3-none-any.whl  dedode-0.0.1-py3-none-any.whl  depth_anything_v2-0.0.1-py3-none-any.whl  dust3r-0.1.0-py3-none-any.whl  (+5 more)
clusterings/: base.py  config.py  connected_component.py  dbscan.py  debug.py  factory.py  fps.py  fps_mast3r.py  vggt.py  visualizer.py
conf/: best_config.yaml  features.yaml  mast3r.yaml  mast3rhybrid-1.yaml  mast3rhybrid-2.yaml  mast3rhybrid-3.yaml  mast3rhybrid-4.yaml  mast3rhybrid-5.yaml  models.yaml  preprocess.yaml
config/: airflow.cfg
core/: __init__.py
dags/: deploy_production_dag.py  drift_retrain_dag.py  ingestion.py  preprocess_features_dag.py  scene_reconstruction_dag.py
data/: .gitignore  scenes.yaml  test.dvc  train.dvc  train_labels.csv.dvc  train_thresholds.csv.dvc
docs/: MLOps_3D_Scene_Reconstruction_Report.docx  business_understanding.md  data_sources.md  fig1.drawio  security.md
features/: alike.py  aliked.py  base.py  config.py  dad.py  darkfeat.py  dedode.py  delf_pytorch.py  disk.py  edgepoint2.py  engineer.py  factory.py  featurebooster.py  hardnet.py  hardnet8.py  lanet.py  line2d.py  mtldesc.py  multiscale.py  posfeat.py  relf.py  sfd2.py  superpoint.py  visualizer.py  xfeat.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
global_descriptors/: apgem.py  base.py  config.py  cvnet.py  dinov2.py  dinov2_salad.py  isc.py  mast3r_retrieval_asmk.py  mast3r_retrieval_spoc.py  mast3r_spoc.py  moge_depth_hog.py  moge_dinov2.py  moge_feature.py  patch_netvlad.py  siglip2.py
localizers/: base.py  common.py  config.py  factory.py  mapfree.py  mickey.py  two_view.py
matchers/: adamatcher.py  base.py  config.py  dkm.py  dkm_rot.py  dual_softmax.py  ecotr.py  efficientloftr.py  factory.py  gim_dkm.py  gim_lightglue.py  gim_loftr.py  lightglue.py  line2d.py  loftr.py  mast3r.py  mast3r_c2f.py  mast3r_hybrid.py  mast3r_mpsfm.py  mast3r_mpsfm_sparse.py  mast3r_sparse.py  matchformer.py  nn_double_softmax.py  nn_matcher.py  omniglue_onnx.py  openglue.py  quadtree.py  roma.py  se2loftr.py  steerer.py  vggt.py  visualizer.py  xfeat.py
model_server/: Dockerfile  server.py
models/: config.py
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
pipelines/: base.py  common.py  config.py  imc2025_mast3r_pipeline.py  imc2025_pipeline.py  matching.py  scene.py  snapshot.py  stage.py  verification.py  visualizer.py
postprocesses/: base.py  coarse_match.py  config.py  dac.py  depth_consistency.py  doppelgangers.py  fast.py  feature_track.py  fsnet.py  localize_pixloc.py  localize_sfm.py  matching_filter.py  minima_verifier.py  ncmnet.py  nms.py  panet.py  pruning.py  ssc.py  vggt_verifier.py
preprocesses/: config.py  deblur.py  depth.py  homography_adaptation.py  orientation.py  pipeline.py  region.py  segmentation.py  tile.py  visualizer.py
results/: cluster0_decimated_model0_3e30508e.ply  cluster0_decimated_model1_3e30508e.ply  cluster0_model0_3e30508e.ply  cluster0_model1_3e30508e.ply  drift_history.jsonl  drift_report.json  submission_3e30508e.csv  submission_e4eeb1d8.csv
retrievers/: base.py  config.py  factory.py  mast3r_retrieval_asmk.py
scripts/: __init__.py  colmap.py  config.py  core.py  data.py  data_schema.py  deploy_production.py  detect_drift.py  detect_keypoints.py  distributed.py  drift_monitor.py  eda_baselines.py  end_parent_dvc_run.py  evaluate.py  evaluate_clustering.py  evaluate_imc2025.py  extract_features.py  extractor.py  generate_pairs.py  generate_secrets.sh  image_processing.py  kernel.py  match.py  pipeline.py  prepare_submission.py  reconstruct.py  reconstruct_scenes.py  retrieval.py  run_pipeline.py  run_pipeline_with_parent.py  run_stage2.py  scene_inventory.py  select_best_run.py  setup_encrypted_volumes.sh  start_parent_dvc_run.py  storage.py  test_drift_monitor.py  train_experiment.py  validate_custom_data.py  validate_data.py  (+1 more)
shortlists/: __init__.py  ann.py  base.py  config.py  connected_component.py  cvnet_rerank.py  doppelgangers.py  ensemble.py  exhaustive.py  factory.py  global_descriptor.py  global_descriptor_fps.py  imc2024.py  line2d_feature.py  mast3r_retrieval_asmk.py  no_update.py  prematching.py  prematching_topk.py  random_walk.py  visualizer.py
tests/: client_test.py  detect_drift.py  pytest_report.html  pytest_report_1.html  pytest_report_2.html  pytest_report_3.html  test_api.py  test_auth.py  test_decimate.py  test_drift_monitor.py  test_fastapi.py
tools/: check_rec.py  extract_features_aliked.py  mast3r_demo.py  mast3r_visloc.py  streamlit_app_visualization.py  summary_config.py
utils/: camvis.py  configuration.py  debug.py  decimate.py  example.py  hloc_io.py  metric.py  vlad.py
(+1079 files in other folders)
