[project]
name = "ns64-imc2025"
authors = [
    {name = "Shuhei Nishimura", email = "ness3psi@gmail.com"}
]
description = "IMC25 1st place solution"
readme = "README.md"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "asmk",
    "build>=1.2.2.post1",
    "cholespy>=2.1.0",
    "croco",
    "cupy-cuda12x>=13.4.1",
    "curope",
    "cython>=3.0.12",
    "dacite>=1.9.2",
    "dad",
    "dedode",
    "depth-anything-v2",
    "dotmap>=1.3.30",
    "dsine",
    "dust3r",
    "e2cnn>=0.2.3",
    "faiss-cpu>=1.10.0",
    "gradio>=5.29.0",
    "h5py>=3.13.0",
    "hloc",
    "html4vision>=0.5.0",
    "hydra-core>=1.3.2",
    "iglovikov-helper-functions>=0.0.53",
    "jupyter>=1.1.1",
    "kornia>=0.8.0",
    "kornia-moons>=0.2.9",
    "lightglue",
    "lightning>=2.5.1",
    "loguru>=0.7.3",
    "mast3r",
    "matplotlib>=3.10.1",
    "mlflow==3.10.1"
    "mmcv-lite",
    "moge",
    "mono",
    "mpsfm",
    "numpy<2",
    "omegaconf>=2.3.0",
    "onnxscript>=0.2.5",
    "opencv-python>=4.11.0.86",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "plotly>=6.0.1",
    "prettytable>=3.16.0",
    "pyceres>=2.4",
    "pycolmap>=3.11.1",
    "pydantic>=2.11.2",
    "pydegensac>=0.1.2",
    "pyrender",
    "pytest>=8.3.5",
    "pytorch-lightning>=2.5.1",
    "pyyaml>=6.0.2",
    "roma>=1.5.2.1",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "superglue-pretrained-network",
    "tensorboard>=2.19.0",
    "timm>=1.0.15",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.1",
    "transformers==4.47.0",
    "trimesh>=4.6.8",
    "utils3d",
    "vggt",
    "wheel>=0.45.1",
    "yacs>=0.1.8",
]

[tool.uv.sources]
lightglue = { path = "bundle/oss/lightglue-0.0-py3-none-any.whl" }
dedode = { path = "bundle/oss/dedode-0.0.1-py3-none-any.whl" }
hloc = { path = "bundle/oss/hloc-1.5-py3-none-any.whl" }
asmk = { path = "bundle/oss/asmk-0.1-cp311-cp311-linux_x86_64.whl" }
vggt = { path = "bundle/oss/vggt-0.0.1-py3-none-any.whl" }
dad = { path = "bundle/oss/dad-0.2.0-py3-none-any.whl" }
croco = { path = "bundle/oss/croco-0.1.2-py3-none-any.whl" }
dsine = { path = "bundle/oss/mpsfm/dsine/dsine-0.0.0-py3-none-any.whl" }
mono = { path = "bundle/oss/mpsfm/Metric3D/mono-0.0.0-py3-none-any.whl" }
mpsfm = { path = "bundle/oss/mpsfm/mpsfm-0.1.0-py3-none-any.whl" }
superglue-pretrained-network = { path = "bundle/oss/mpsfm/superpoint/superglue_pretrained_network-0.0.0-py3-none-any.whl" }
utils3d = { path = "bundle/oss/moge/utils3d-0.0.2-py3-none-any.whl" }
moge = { path = "bundle/oss/moge/moge-1.0.0-py3-none-any.whl" }
curope = { path = "bundle/oss/curope-0.0.0-cp311-cp311-linux_x86_64.whl" }
depth-anything-v2 = { path = "bundle/oss/depth_anything_v2-0.0.1-py3-none-any.whl" }
dust3r = { path = "bundle/oss/dust3r-0.1.0-py3-none-any.whl" }
mast3r = { path = "bundle/oss/mast3r-0.1.0-py3-none-any.whl" }
pyrender = { path = "bundle/oss/pyrender-0.1.45-py3-none-any.whl" }

[tool.ruff]
extend-exclude = [
    "bundle",
    "conf",
    "data",
    "extra",
]

[tool.ruff.lint]
extend-select = [
    "UP",
    "I",
]
ignore = [
    "UP007"
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.ruff.lint.isort]
required-imports = [
    "from __future__ import annotations"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api", "core", "dags", "models", "plugins", "matchers", "features", "pipelines", "retrievers", "shortlists", "monitoring", "localizers", "clusterings", "model_server", "preprocesses", "postprocesses", "global_descriptors", "scripts", "tools", "utils"]
exclude = ["logs", "data", "weights"]
